# notes2md

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/processor/: applenotes.rs  markdown.rs  mod.rs  simplenote.rs
test_data/: expected_1.md  expected_2-simplenote-single.md  file_you_cant_read.txt  happy.txt  make-test-data-work.sh  not_a_dir.txt  process-active-trashed.json  simplenote-single.json
